[gd_scene load_steps=3 format=3 uid="uid://dep0c4220lsdn"]

[ext_resource type="Script" path="res://scripts/resonance_ripple.gd" id="1_c7col"]
[ext_resource type="Theme" uid="uid://du8l63a56uknv" path="res://resources/themes/EventPanel.tres" id="1_xf13d"]

[node name="ResonanceRipple" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c7col")

[node name="EventPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -314.0
offset_top = -171.0
offset_right = 315.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_xf13d")

[node name="MainEvent" type="Label" parent="EventPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.5
offset_top = -61.0
offset_right = 293.5
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xf13d")
text = "Resonance RIpple
\"You strike the dome just right. The dome hums and brittles 
with a resonssant tone. You sense the shattering.\"
Your motivation runs even more higher than ever."
horizontal_alignment = 1
vertical_alignment = 1

[node name="EventTimer" type="Timer" parent="."]

[node name="TextTimer" type="Timer" parent="."]
one_shot = true

[node name="buff" type="Timer" parent="."]

[connection signal="timeout" from="EventTimer" to="." method="_on_event_timer_timeout"]
[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="timeout" from="buff" to="." method="_on_buff_timeout"]
